# hacktor_stb

./: .gitignore  CMakeLists.txt  README.md  app.overlay  build.sh  prj.conf  transit_bridge.py
dts/bindings/: zephyr,mipi-dbi-spi.yaml
dts/bindings/display/: galaxycore,gc9x01x.yaml
src/: ble.c  ble.h  main.c  panel.c  transit_ui.c  transit_ui.h
